<resources>
    <string name="app_name">FlashCard</string>
    <string name="welcome_screen_offline_mode_button">Offline Mode</string>
    <string name="welcome_screen_login_button">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="lb_new_card">New Card</string>
    <string name="new_folder">New Folder</string>
    <string name="lb_folder">Folder name:</string>
    <string name="lb_question">Question:</string>
    <string name="lb_answer">Answer:</string>
    <string name="bt_save">Save and Back</string>
    <string name="lb_choose_folder">Choose Folder</string>
    <string name="new_card_set">New Card Set</string>
    <string name="lb_card_set_name">Card Set Name:</string>
    <string name="text_card_set_description">Description</string>
    <string name="bt_create_new_set">Create New Set</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="play">Play</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="item_removed">1 item removed</string>
    <string name="undo">Undo</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
