<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
                android:id="@+id/bt_play"
                android:text="@string/play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/bt_edit"
                android:text="@string/edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/bt_remove"
                android:text="@string/remove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
</LinearLayout>
