<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="10"
                android:id="@+id/add_new_card_container">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">



                <TextView
                        android:text="@string/lb_new_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="30sp"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_backspace"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/bt_dismiss"/>

        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="7">
            <TextView
                    style="@style/label_add_new_card"
                    android:text="@string/lb_question"
                    android:id="@+id/textView6"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/text_question"
                    android:minLines="1"
                    android:maxLines="5"
                    android:textSize="15sp"
                    android:layout_below="@+id/textView6"
                    android:layout_alignLeft="@+id/textView6"
                    android:layout_alignStart="@+id/textView6"/>

            <TextView
                    style="@style/label_add_new_card"
                    android:text="@string/lb_answer"
                    android:layout_below="@+id/text_question"
                    android:layout_alignLeft="@+id/text_question"
                    android:layout_alignStart="@+id/text_question"
                    android:id="@+id/textView7"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/text_answer"
                    android:minLines="4"
                    android:maxLines="8"
                    android:textSize="15sp"
                    android:layout_below="@+id/textView7"
                    android:layout_alignLeft="@+id/textView7"
                    android:layout_alignStart="@+id/textView7"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <Button
                    android:id="@+id/bt_save_card"
                    android:text="@string/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>
        </RelativeLayout>

</LinearLayout>
